--- a/index.html
+++ b/index.html
@@ -137,19 +137,25 @@
          <div class="contenedor">
               <h2 class="titulo">Portafolio</h2>
               <div class="portafolie-inhalte">
-                <div class="proyekt">
-                      <h3 class="titel-proyekt">Konferenz</h3>
-                      <div class="imagem"><img src="img/projekt-3.jpg" alt=""> </div>
+               <div class="projekt">
+                    <h4 class="titel-projekt">Konferenz</h4>
+                      <a href="projekte/Konferenz/index.php" target="_blank">
+                           <div class="projekt-img"><img src="img/projekt-3.jpg" alt=""> </div>
+                      </a>
                       <p>HTML - CSS - JavaScript - jQuery - PHP</p>
                 </div>
-                <div class="proyekt">
-                    <h3 class="titel-proyekt">Immobilien</h3>
-                    <div class="imagem"><img src="img/projekt-1.jpg" alt=""> </div>
+                <div class="projekt">
+                    <h4 class="titel-projekt">Immobilien</h4>
+                    <a href="projekte/inmobilie/index.html" target="_blank">
+                         <div class="projekt-img"><img src="img/projekt-2.jpg" alt=""> </div>
+                    </a>
                     <p>HTML - CSS - Responsive</p>
                 </div>
-                <div class="proyekt">
-                    <h3 class="titel-proyekt">Store-T Shirt</h3>
-                    <div class="imagem"><img src="img/projekt-2.jpg" alt=""> </div>
+                <div class="projekt">
+                    <h4 class="titel-projekt">Store-T Shirt</h4>
+                    <a href="projekte/store/index.html" target="_blank">
+                         <div class="projekt-img"><img src="img/projekt-1.jpg" alt=""> </div>
+                    </a>
                     <p>HTML - CSS - Responsive</p>
                 </div>
 
