--- a/projekte/inmobilie/anuncios.html
+++ b/projekte/inmobilie/anuncios.html
@@ -25,11 +25,11 @@
               </div>
 
               <nav id="navegacion" class="navegacion">
-                   <a href="index.html">Inicio</a>
-                   <a href="nosotros.html">Nosotros</a>
-                   <a href="anuncios.html">Venta</a>
-                   <a href="blog.html">Blog</a>
-                   <a href="contacto.html">Contactenos</a>
+                 <a href="index.html">Home</a>
+                 <a href="nosotros.html">Über uns</a>
+                 <a href="anuncios.html">Angebote</a>
+                 <a href="blog.html">Blog</a>
+                 <a href="contacto.html">Kontakt</a>
               </nav>
             </div>
          </div> <!--- Contenedor -->
@@ -37,18 +37,18 @@
 
       <!-- ::::::::::::Pagina principal:::::::::::: -->
       <main class="contenedor seccion">
-          <h2 class="titulo-centrado">Casas y departamentos en venta</h2>
+          <h2 class="titulo-centrado">Häuser und Wohnungen zu verkaufen</h2>
 
           <div class="contenedor-anuncios">
              <div class="anuncio"> <!--anuncio 1-->
                   <img src="img/anuncio1.jpg" alt="">
                   <div class="contenido-anuncio">
                        <h3>
-                            Casa de lujo en el lago
+                            Luxushaus am See
                        </h3>
                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis iusto minus neque recusandae iste id numquam quos suscipit architecto officiis.</p>
                        <p class="precio">
-                            $ 300,000.00
+                            € 2'300,000.00
                        </p>
                        <ul class="iconos">
                             <li>
@@ -64,17 +64,17 @@
                                  <p>5</p>
                             </li>
                        </ul>
-                       <a href="anuncio.html" class="boton boton-naranja d-block centrar"> Ver propiedades</a>
+                       <a href="anuncio.html" class="boton boton-naranja d-block centrar">ansehen</a>
                   </div>
              </div>
              <div class="anuncio"> <!--anuncio 2-->
                   <img src="img/anuncio2.jpg" alt="">
                   <div class="contenido-anuncio">
                        <h3>
-                            Casa de lujo en el lago
+                            Hochwertiges Neubau
                        </h3>
                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis iusto minus neque recusandae iste id numquam quos suscipit architecto officiis.</p>
-                       <p class="precio"> $ 300,000.00 </p>
+                       <p class="precio">€ 2'900,000.00</p>
                        <ul class="iconos">
                             <li>
                                  <img src="img/icono_wc.svg" alt="">
@@ -90,15 +90,15 @@
                             </li>
                        </ul>
 
-                       <a href="#" class="boton boton-naranja d-block centrar"> Ver propiedades</a>
+                       <a href="anuncio.html" class="boton boton-naranja d-block centrar">ansehen</a>
                   </div>
              </div>
              <div class="anuncio"> <!--anuncio 3-->
                   <img src="img/anuncio3.jpg" alt="">
                   <div class="contenido-anuncio">
-                       <h3> Casa de lujo en el lago </h3>
+                       <h3>Haus im Berg</h3>
                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis iusto minus neque recusandae iste id numquam quos suscipit architecto officiis.</p>
-                       <p class="precio"> $ 300,000.00 </p>
+                       <p class="precio">€ 3'300,000.00</p>
                        <ul class="iconos">
                             <li>
                                  <img src="img/icono_wc.svg" alt="">
@@ -113,18 +113,18 @@
                                  <p>5</p>
                             </li>
                        </ul>
-                       <a href="#" class="boton boton-naranja d-block centrar"> Ver propiedades</a>
+                       <a href="anuncio.html" class="boton boton-naranja d-block centrar">ansehen</a>
                   </div>
              </div>
              <div class="anuncio"> <!--anuncio 4-->
                  <img src="img/anuncio4.jpg" alt="">
                  <div class="contenido-anuncio">
                       <h3>
-                           Casa de lujo en el lago
+                           Haus mit Blick auf den Wald
                       </h3>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis iusto minus neque recusandae iste id numquam quos suscipit architecto officiis.</p>
                       <p class="precio">
-                           $ 300,000.00
+                           € 2'300,000.00
                       </p>
                       <ul class="iconos">
                            <li>
@@ -140,17 +140,17 @@
                                 <p>5</p>
                            </li>
                       </ul>
-                      <a href="anuncio.html" class="boton boton-naranja d-block centrar"> Ver propiedades</a>
+                      <a href="anuncio.html" class="boton boton-naranja d-block centrar">ansehen</a>
                  </div>
             </div>
             <div class="anuncio"> <!--anuncio 5-->
                  <img src="img/anuncio5.jpg" alt="">
                  <div class="contenido-anuncio">
                       <h3>
-                           Casa de lujo en el lago
+                           Hochwertiges Neubau
                       </h3>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis iusto minus neque recusandae iste id numquam quos suscipit architecto officiis.</p>
-                      <p class="precio"> $ 300,000.00 </p>
+                      <p class="precio">€ 4'400,000.00</p>
                       <ul class="iconos">
                            <li>
                                 <img src="img/icono_wc.svg" alt="">
@@ -166,7 +166,7 @@
                            </li>
                       </ul>
 
-                      <a href="#" class="boton boton-naranja d-block centrar"> Ver propiedades</a>
+                      <a href="anuncio.html" class="boton boton-naranja d-block centrar">ansehen</a>
                  </div>
             </div>
             <div class="anuncio"> <!--anuncio 6-->
@@ -174,7 +174,7 @@
                  <div class="contenido-anuncio">
                       <h3> Casa de lujo en el lago </h3>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis iusto minus neque recusandae iste id numquam quos suscipit architecto officiis.</p>
-                      <p class="precio"> $ 300,000.00 </p>
+                      <p class="precio">€ 3'800,000.00 </p>
                       <ul class="iconos">
                            <li>
                                 <img src="img/icono_wc.svg" alt="">
@@ -189,7 +189,7 @@
                                 <p>5</p>
                            </li>
                       </ul>
-                      <a href="#" class="boton boton-naranja d-block centrar"> Ver propiedades</a>
+                      <a href="anuncio.html" class="boton boton-naranja d-block centrar">ansehen</a>
                  </div>
             </div>
           </div>
@@ -202,13 +202,13 @@
       <footer class="site-footer seccion">
         <div class="contenedor contenedor-footer">
             <nav class="navegacion">
-               <a href="index.html">Inicio</a>
-               <a href="nosotros.html">Nosotros</a>
-               <a href="anuncios.html">Venta</a>
-               <a href="blog.html">Blog</a>
-               <a href="contacto.html">Contactenos</a>
+                <a href="index.html">Home</a>
+                <a href="nosotros.html">Über uns</a>
+                <a href="anuncios.html">Angebote</a>
+                <a href="blog.html">Blog</a>
+                <a href="contacto.html">Kontakt</a>
             </nav>
-            <p class="copyright">Todos los derechos reservados &copy; </p>
+            <p class="copyright">Alle Rechte vorbehalten &copy; </p>
          </div>
       </footer>
    </body>
