--- a/projekte/inmobilie/blog.html
+++ b/projekte/inmobilie/blog.html
@@ -25,11 +25,11 @@
               </div>
 
               <nav id="navegacion" class="navegacion">
-                   <a href="index.html">Inicio</a>
-                   <a href="nosotros.html">Nosotros</a>
-                   <a href="anuncios.html">Venta</a>
-                   <a href="blog.html">Blog</a>
-                   <a href="contacto.html">Contactenos</a>
+                  <a href="index.html">Home</a>
+                  <a href="nosotros.html">Über uns</a>
+                  <a href="anuncios.html">Angebote</a>
+                  <a href="blog.html">Blog</a>
+                  <a href="contacto.html">Kontakt</a>
               </nav>
             </div>
          </div> <!--- Contenedor -->
@@ -98,13 +98,13 @@
       <footer class="site-footer seccion">
         <div class="contenedor contenedor-footer">
             <nav class="navegacion">
-               <a href="index.html">Inicio</a>
-               <a href="nosotros.html">Nosotros</a>
-               <a href="anuncios.html">Venta</a>
-               <a href="blog.html">Blog</a>
-               <a href="contacto.html">Contactenos</a>
+                <a href="index.html">Home</a>
+                <a href="nosotros.html">Über uns</a>
+                <a href="anuncios.html">Angebote</a>
+                <a href="blog.html">Blog</a>
+                <a href="contacto.html">Kontakt</a>
             </nav>
-            <p class="copyright">Todos los derechos reservados &copy; </p>
+            <p class="copyright">Alle Rechte vorbehalten &copy; </p>
          </div>
       </footer>
    </body>
