--- a/projekte/inmobilie/index.html
+++ b/projekte/inmobilie/index.html
@@ -16,7 +16,7 @@
           <div class="contenedor contenido-header">
                <div class="barra">
                     <a href="/">
-                         <img src="img/logo.svg" alt="Logo">
+                         <img src="img/logo2.svg" alt="Logo">
                     </a>
                     <div class="mobile-menu">
                        <a href="#navegacion">
@@ -25,34 +25,34 @@
                     </div>
 
                     <nav id="navegacion" class="navegacion">
-                         <a href="index.html">Inicio</a>
-                         <a href="nosotros.html">Nosotros</a>
-                         <a href="anuncios.html">Venta</a>
+                         <a href="index.html">Home</a>
+                         <a href="nosotros.html">Über uns</a>
+                         <a href="anuncios.html">Angebote</a>
                          <a href="blog.html">Blog</a>
-                         <a href="contacto.html">Contactenos</a>
+                         <a href="contacto.html">Kontakt</a>
                     </nav>
                </div>
-               <h1>Casas y departamentos de lujo en Venta</h1>
+               <h1>Luxushäuser und Wohnungen zum Verkauf</h1>
           </div> <!--- Contenedor -->
      </header>
 
 <!-- ::::::::::::MAS SOBRE NOSOTROS:::::::::::: -->
       <section class="contenedor seccion">
-          <h2 class="titulo-centrado">Mas sobre nosotros</h2>
+          <h2 class="titulo-centrado">Mehr über uns</h2>
           <div class="contenedor-iconos">
                <div class="icono">
                     <img src="img/icono1.svg" alt="">
-                    <h3> Seguridad</h3>
+                    <h3>Sicherheit</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                </div>
                <div class="icono">
                     <img src="img/icono2.svg" alt="">
-                    <h3> El mejor precio</h3>
+                    <h3>Der beste Preis</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                </div>
                <div class="icono">
                     <img src="img/icono3.svg" alt="">
-                    <h3> A tiempo</h3>
+                    <h3>Pünktlich</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
                </div>
           </div> <!--  Contenedor de iconos-->
@@ -60,44 +60,44 @@
 
 <!-- ::::::::::::Casas y departamentos en venta:::::::::::: -->
      <main class="seccion contenedor">
-          <h2 class="titulo-centrado">Casas y departamentos en venta</h2>
+          <h2 class="titulo-centrado">Häuser und Wohnungen zu verkaufen</h2>
           <div class="contenedor-anuncios">
             <div class="anuncio"> <!--anuncio 1-->
                  <img src="img/anuncio1.jpg" alt="">
 
                  <div class="contenido-anuncio">
                       <h3>
-                           Casa de lujo en el lago
+                           Luxushaus am See
                       </h3>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis iusto minus neque recusandae iste id numquam quos suscipit architecto officiis.</p>
                       <p class="precio">
-                           $ 300,000.00
+                           € 3500,000.00
                       </p>
                       <ul class="iconos">
                            <li>
                                 <img src="img/icono_wc.svg" alt="">
-                                <p>3</p>
+                                <p>4</p>
                            </li>
                            <li>
                                 <img src="img/icono_estacionamiento.svg" alt="">
-                                <p>1</p>
+                                <p>2</p>
                            </li>
                            <li>
                                 <img src="img/icono_dormitorio.svg" alt="">
-                                <p>5</p>
+                                <p>6</p>
                            </li>
                       </ul>
-                      <a href="anuncio.html" class="boton boton-naranja d-block centrar"> Ver propiedades</a>
+                      <a href="anuncio.html" class="boton boton-naranja d-block centrar">ansehen</a>
                  </div>
             </div>
             <div class="anuncio"> <!--anuncio 2-->
                  <img src="img/anuncio2.jpg" alt="">
                  <div class="contenido-anuncio">
                       <h3>
-                           Casa de lujo en el lago
+                           Hochwertiges Neubau
                       </h3>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis iusto minus neque recusandae iste id numquam quos suscipit architecto officiis.</p>
-                      <p class="precio"> $ 300,000.00 </p>
+                      <p class="precio"> $ 3000,000.00 </p>
                       <ul class="iconos">
                            <li>
                                 <img src="img/icono_wc.svg" alt="">
@@ -105,7 +105,7 @@
                            </li>
                            <li>
                                 <img src="img/icono_estacionamiento.svg" alt="">
-                                <p>1</p>
+                                <p>3</p>
                            </li>
                            <li>
                                 <img src="img/icono_dormitorio.svg" alt="">
@@ -113,15 +113,15 @@
                            </li>
                       </ul>
 
-                      <a href="#" class="boton boton-naranja d-block centrar"> Ver propiedades</a>
+                      <a href="#" class="boton boton-naranja d-block centrar">ansehen</a>
                  </div>
             </div>
             <div class="anuncio"> <!--anuncio 3-->
                  <img src="img/anuncio3.jpg" alt="">
                  <div class="contenido-anuncio">
-                      <h3> Casa de lujo en el lago </h3>
+                      <h3>Haus im Berg</h3>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis iusto minus neque recusandae iste id numquam quos suscipit architecto officiis.</p>
-                      <p class="precio"> $ 300,000.00 </p>
+                      <p class="precio"> $ 2000,000.00 </p>
                       <ul class="iconos">
                            <li>
                                 <img src="img/icono_wc.svg" alt="">
@@ -129,35 +129,35 @@
                            </li>
                            <li>
                                 <img src="img/icono_estacionamiento.svg" alt="">
-                                <p>1</p>
+                                <p>2</p>
                            </li>
                            <li>
                                 <img src="img/icono_dormitorio.svg" alt="">
-                                <p>5</p>
+                                <p>7</p>
                            </li>
                       </ul>
-                      <a href="#" class="boton boton-naranja d-block centrar"> Ver propiedades</a>
+                      <a href="#" class="boton boton-naranja d-block centrar">ansehen</a>
                  </div>
             </div>
           </div>
           <div class="ver-todas">
-            <a href="anuncios.html" class="boton boton-verde">Ver todas</a>
+            <a href="anuncios.html" class="boton boton-verde">alles ansehen</a>
           </div>
      </main>
 
      <!-- ::::::::::::Contactenos:::::::::::: -->
      <section class="fondo-contactenos">
           <div class="contenedor contenido-contactenos">
-               <h2 class="">Encuentra la casa de tus sueños</h2>
-               <p>Llena el formulario de contactos y un asesor se pondra en contacto con ustedes el mismo dia.</p>
-               <div class="boton boton-naranja">Contactenos</div>
+               <h2 class="">Finden Sie das Zuhause Ihrer Träume</h2>
+               <p>Füllen Sie das Kontaktformular aus und ein Berater wird Sie am selben Tag kontaktieren</p>
+               <div class="boton boton-naranja">Kontaktiere uns</div>
           </div>
      </section>
 
 <!-- ::::::::::::Blog:::::::::::: -->
      <section class="seccion-inferior contenedor">
           <div class="blog">
-               <h3 class="titulo-centrado">Nuestro Blog</h3>
+               <h3 class="titulo-centrado">Unser Blog</h3>
 
                <article class="entrada-blog">
                   <div class="img-blog">
@@ -165,9 +165,9 @@
                   </div>
                   <div class="texto-blog">
                     <a href="entrada.html">
-                       <h4>Terraza en el techo de tu casa</h4>
+                       <h4>Terrasse auf dem Dach Ihres Hauses</h4>
                     </a>
-                    <p>Escrito por: <span>Carlos Moran</span></p>
+                    <p>Geschrieben von: <span>Carlos Moran</span></p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, culpa.consectetur adipisicing elit. Quasi, culpa.</p>
                   </div>
                </article>
@@ -178,16 +178,16 @@
                   </div>
                   <div class="texto-blog">
                      <a href="entrada.html">
-                        <h4>Casa con piscina</h4>
+                        <h4>Haus mit Pool</h4>
                      </a>
-                     <p>Escrito por: <span>  Juan Moran</span></p>
+                     <p>Geschrieben von: <span>  Juan Moran</span></p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, culpa.consectetur adipisicing elit. Quasi, culpa.</p>
                   </div>
                </article>
           </div>
 
           <div class="testimoniales seccion">
-               <h3 class="titulo-centrado">Testimoniales</h3>
+               <h3 class="titulo-centrado">Referenzen</h3>
                <div class="testimonial">
                   <blockquote>Lorem ipsum dolor sit amet, elit. Esse, aliquid consectetur adipisicing elit. Esse, aliquid  consectetur adipisicing elit. Esse, aliquid elit. Esse. ipsum dolor sit amet</blockquote>
                   <p>-Juan De la torre</p>
@@ -199,13 +199,13 @@
      <footer class="site-footer seccion">
         <div class="contenedor contenedor-footer">
             <nav class="navegacion">
-               <a href="index.html">Inicio</a>
-               <a href="nosotros.html">Nosotros</a>
-               <a href="anuncios.html">Venta</a>
+               <a href="index.html">Home</a>
+               <a href="nosotros.html">Über uns</a>
+               <a href="anuncios.html">Angebote</a>
                <a href="blog.html">Blog</a>
-               <a href="contacto.html">Contactenos</a>
+               <a href="contacto.html">Kontakt</a>
             </nav>
-            <p class="copyright">Todos los derechos reservados &copy; </p>
+            <p class="copyright">Alle Rechte vorbehalten &copy; </p>
          </div>
      </footer>
 </body>
