--- a/projekte/inmobilie/nosotros.html
+++ b/projekte/inmobilie/nosotros.html
@@ -25,11 +25,11 @@
               </div>
 
               <nav id="navegacion" class="navegacion">
-                   <a href="index.html">Inicio</a>
-                   <a href="nosotros.html">Nosotros</a>
-                   <a href="anuncios.html">Venta</a>
-                   <a href="blog.html">Blog</a>
-                   <a href="contacto.html">Contactenos</a>
+                  <a href="index.html">Home</a>
+                  <a href="nosotros.html">Über uns</a>
+                  <a href="anuncios.html">Angebote</a>
+                  <a href="blog.html">Blog</a>
+                  <a href="contacto.html">Kontakt</a>
               </nav>
             </div>
          </div> <!--- Contenedor -->
@@ -37,14 +37,14 @@
 
       <!-- ::::::::::::Pagina principal:::::::::::: -->
       <main class="contenedor">
-         <h1 class="titulo-centrado"> Conoce sobre nosotros</h1>
+         <h1 class="titulo-centrado">Über uns</h1>
 
          <div class="contenido-nosotros">
             <div class="imagen">
                <img src="img/nosotros.jpg" alt="imagen sobre nosotros">
             </div>
             <div class="texto-nosotros">
-               <blockquote>25 años de experiencia</blockquote>
+               <blockquote>25 Jahre Erfahrung</blockquote>
                <p>Aliquam erat volutpat. Fusce quis venenatis turpis, non euismod risus. Sed imperdiet venenatis sem quis pretium. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse volutpat, velit at dignissim bibendum, ipsum urna laoreet leo, vehicula laoreet augue justo in diam. Ut non velit venenatis, facilisis neque et, condimentum elit. Nullam sodales, nibh eu posuere posuere, nibh sapien iaculis dui, nec malesuada est turpis ut lorem.</p>
 
                <p>Ut aliquam erat et nulla egestas interdum. Cras vitae rutrum metus. Vivamus tincidunt nisl eu facilisis finibus. Etiam pretium vel massa quis condimentum. In lobortis mauris a justo semper, vitae elementum nunc molestie. Curabitur in sagittis leo. Donec id ornare nisl, nec mollis justo. Phasellus eu nibh quis turpis faucibus efficitur eget quis magna.</p>
@@ -54,21 +54,21 @@
 
       <!-- ::::::::::::MAS SOBRE NOSOTROS:::::::::::: -->
       <section class="contenedor seccion">
-          <h2 class="titulo-centrado">Mas sobre nosotros</h2>
+          <h2 class="titulo-centrado">Mehr über uns</h2>
           <div class="contenedor-iconos">
                <div class="icono">
                     <img src="img/icono1.svg" alt="">
-                    <h3> Seguridad</h3>
+                    <h3>Sicherheit</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                </div>
                <div class="icono">
                     <img src="img/icono2.svg" alt="">
-                    <h3> El mejor precio</h3>
+                    <h3>Der beste Preis</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                </div>
                <div class="icono">
                     <img src="img/icono3.svg" alt="">
-                    <h3> A tiempo</h3>
+                    <h3>Pünktlich</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
                </div>
           </div> <!--  Contenedor de iconos-->
@@ -78,13 +78,13 @@
       <footer class="site-footer seccion">
         <div class="contenedor contenedor-footer">
             <nav class="navegacion">
-               <a href="index.html">Inicio</a>
-               <a href="nosotros.html">Nosotros</a>
-               <a href="anuncios.html">Venta</a>
-               <a href="blog.html">Blog</a>
-               <a href="contacto.html">Contactenos</a>
+                <a href="index.html">Home</a>
+                <a href="nosotros.html">Über uns</a>
+                <a href="anuncios.html">Angebote</a>
+                <a href="blog.html">Blog</a>
+                <a href="contacto.html">Kontakt</a>
             </nav>
-            <p class="copyright">Todos los derechos reservados &copy; </p>
+            <p class="copyright">Alle Rechte vorbehalten &copy; </p>
          </div>
       </footer>
    </body>
