--- a/projekte/inmobilie/anuncio.html
+++ b/projekte/inmobilie/anuncio.html
@@ -25,11 +25,11 @@
               </div>
 
               <nav id="navegacion" class="navegacion">
-                   <a href="index.html">Inicio</a>
-                   <a href="nosotros.html">Nosotros</a>
-                   <a href="anuncios.html">Venta</a>
-                   <a href="blog.html">Blog</a>
-                   <a href="contacto.html">Contactenos</a>
+                   <a href="index.html">Home</a>
+                  <a href="nosotros.html">Über uns</a>
+                  <a href="anuncios.html">Angebote</a>
+                  <a href="blog.html">Blog</a>
+                  <a href="contacto.html">Kontakt</a>
               </nav>
             </div>
          </div> <!--- Contenedor -->
@@ -37,26 +37,26 @@
 
       <!-- ::::::::::::Principal:::::::::::: -->
 
-      <h1 class="titulo-centrado">Casa frente al bosque</h1>
+      <h1 class="titulo-centrado">Haus mit Blick auf den Wald</h1>
       <img src="img/destacada.jpg" alt="">
 
       <div class="contenedor seccion contenido-centrado">
          <div class="anuncio-precio-iconos">
             <p class="precio">
-                $ 300,000.00
+                € 7'300,000.00
             </p>
             <ul class="iconos">
                 <li>
                      <img src="img/icono_wc.svg" alt="">
-                     <p>3</p>
+                     <p>6</p>
                 </li>
                 <li>
                      <img src="img/icono_estacionamiento.svg" alt="">
-                     <p>1</p>
+                     <p>5</p>
                 </li>
                 <li>
                      <img src="img/icono_dormitorio.svg" alt="">
-                     <p>5</p>
+                     <p>10</p>
                 </li>
             </ul>
          </div>
@@ -70,13 +70,13 @@
       <footer class="site-footer seccion">
         <div class="contenedor contenedor-footer">
             <nav class="navegacion">
-               <a href="index.html">Inicio</a>
-               <a href="nosotros.html">Nosotros</a>
-               <a href="anuncios.html">Venta</a>
-               <a href="blog.html">Blog</a>
-               <a href="contacto.html">Contactenos</a>
+                <a href="index.html">Home</a>
+                <a href="nosotros.html">Über uns</a>
+                <a href="anuncios.html">Angebote</a>
+                <a href="blog.html">Blog</a>
+                <a href="contacto.html">Kontakt</a>
             </nav>
-            <p class="copyright">Todos los derechos reservados &copy; </p>
+            <p class="copyright">Alle Rechte vorbehalten &copy; </p>
          </div>
       </footer>
    </body>
