--- a/projekte/inmobilie/contacto.html
+++ b/projekte/inmobilie/contacto.html
@@ -25,11 +25,11 @@
               </div>
 
               <nav id="navegacion" class="navegacion">
-                   <a href="index.html">Inicio</a>
-                   <a href="nosotros.html">Nosotros</a>
-                   <a href="anuncios.html">Venta</a>
-                   <a href="blog.html">Blog</a>
-                   <a href="contacto.html">Contactenos</a>
+                  <a href="index.html">Home</a>
+                  <a href="nosotros.html">Über uns</a>
+                  <a href="anuncios.html">Angebote</a>
+                  <a href="blog.html">Blog</a>
+                  <a href="contacto.html">Kontakt</a>
               </nav>
             </div>
          </div> <!--- Contenedor -->
@@ -37,63 +37,63 @@
 
       <!-- ::::::::::::Principal:::::::::::: -->
 
-      <h1 class="titulo-centrado">Contacto</h1>
+      <h1 class="titulo-centrado">Kontakt</h1>
       <img src="img/destacada3.jpg" alt="">
       <main class="contenedor seccion contenido-centrado">
-         <h2 class="titulo-centrado">Llena el formulario de contacto</h2>
+         <h2 class="titulo-centrado">Füllen Sie das Kontaktformular aus</h2>
 
          <form class="contacto" action="">
             <fieldset>
-               <legend>Información personal</legend>
-               <label for="nombre">Nombre:</label>
+               <legend>Persönliche Informationen</legend>
+               <label for="nombre">Name:</label>
                <input type="text" id="nombre" placeholder="Tu nombre">
 
                <label for="email">Email:</label>
                <input type="email" id="email" placeholder="Tu email" required>
 
-               <label for="telefono">Telefono:</label>
+               <label for="telefono">Telefon:</label>
                <input type="tel" id="telefono" placeholder="Tu telefono" required>
 
-               <label for="mensaje">Mensaje:</label>
+               <label for="mensaje">Botschaft:</label>
                <textarea id="mensaje"></textarea>
             </fieldset>
 
             <fieldset>
-               <legend>Información sobre la propiedad</legend>
+               <legend>Immobilieninformationen</legend>
 
-               <label for="opciones">Vende o Compra</label>
+               <label for="opciones">verkaufen oder kaufen</label>
                <select id="opciones">
-                  <option value="" disabled selected>--Seleccionar--</option>
-                  <option value="compra">Compra</option>
-                  <option value="venta">Venta</option>
+                  <option value="" disabled selected>--Auswählen--</option>
+                  <option value="compra">kaufen</option>
+                  <option value="venta">verkaufen</option>
                </select>
 
-               <label for="cantidad">Cantidad:</label>
+               <label for="cantidad">Menge:</label>
                <input type="number" id="cantidad" min="0">
             </fieldset>
 
             <fieldset>
-               <legend>Contacto</legend>
+               <legend>Kontakt</legend>
 
-               <p>Como desea ser contactado</p>
+               <p>Wie möchten Sie kontaktiert werden?</p>
                <div class="forma-contacto">
-                  <label for="telefono" class="telefono">Telefono:</label>
+                  <label for="telefono" class="telefono">Telefon:</label>
                   <input type="radio" name="contacto" value="telefono" id="telefono">
 
                   <label for="correo">Email:</label>
                   <input type="radio" name="contacto" value="correo" id="correo">
                </div>
 
-               <p>Si eligio telefono, elija la fecha y la hora</p>
-               <label for="fecha">Fecha:</label>
+               <p>Wenn Sie ein Telefon ausgewählt haben, wählen Sie Datum und Uhrzeit</p>
+               <label for="fecha">Termin:</label>
                <input type="date" id="fecha">
 
-               <label for="hora">Hora:</label>
+               <label for="hora">Uhrzeit:</label>
                <input type="time" id="hora" min="08:00" max="18:00">
 
 
             </fieldset>
-            <input type="submit" value="Enviar" class="boton boton-verde">
+            <input type="submit" value="Absenden" class="boton boton-verde">
 
          </form>
 
@@ -103,13 +103,13 @@
       <footer class="site-footer seccion">
         <div class="contenedor contenedor-footer">
             <nav class="navegacion">
-               <a href="index.html">Inicio</a>
-               <a href="nosotros.html">Nosotros</a>
-               <a href="anuncios.html">Venta</a>
-               <a href="blog.html">Blog</a>
-               <a href="contacto.html">Contactenos</a>
+                <a href="index.html">Home</a>
+                <a href="nosotros.html">Über uns</a>
+                <a href="anuncios.html">Angebote</a>
+                <a href="blog.html">Blog</a>
+                <a href="contacto.html">Kontakt</a>
             </nav>
-            <p class="copyright">Todos los derechos reservados &copy; </p>
+            <p class="copyright">Alle Rechte vorbehalten &copy; </p>
          </div>
       </footer>
    </body>
