--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
         <div class="box_beruf">
 
           <div class="grupe_beruf">
-            <h3>Küchenhilfe ( akt. in Kurzarbeit )</h3>
-            <h4>04/2013 bis Aktuell (München)</h4>
+            <h3>Küchenhilfe</h3>
+            <h4>04/2013 - 10/2020 (München)</h4>
             <h5>Fleming's Hotels</h5>
             <h5>Augustiner Ewiges Licht</h5>
             <h5>Cafe & Restaurant Nasca</h5>
